Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114559

SPNEGO/Negotiate: Can't set spn Option - Signal not firing

    XMLWordPrintable

Details

    • Windows
    • 90af40ccd (dev), a8b0b7798 (6.6), b0c9f38cb (6.5)

    Description

      When using QNetworkAccessManager with Negotiate Authentication, I need to set the 'spn' outgoing option of QAuthenticator. To access the QAuthenticator component, the signal 'QNetworkAccessManager::authenticationRequired' has to fire, as soon as the server returns '401 - Unauthorized'. However the signal does not fire.

      The Issue lies in 'qhttpnetworkconnection.cpp'. The signal is fired in line 449, but the if-statement in line 435 only allows NTLM Authentication (See "Code_Sample_1.png").

      The file "qhttpnetworkconnection_mod.cpp" contains the modified code, which resolves this issue.

       

      Thank you for addressing this issue.

      Sincerely,

      Emil Wipplinger

      Attachments

        1. Code_Sample_1.png
          Code_Sample_1.png
          144 kB
        2. diff_out.txt
          0.7 kB
        3. qhttpnetworkconnection_mod.cpp
          62 kB
        For Gerrit Dashboard: QTBUG-114559
        # Subject Branch Project Status CR V

        Activity

          People

            manordheim Mårten Nordheim
            codemil Emil Wipplinger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes